# discord-split

./: Cargo.toml  README.md
src/: main.rs
